# fastapi-app

./: .env  .pre-commit-config.yaml  pyproject.toml  run.py
app/: create_app.py  di.py  main.py
app/core/: config.py
app/repository/: app.py  mongo.py  movie.py  review.py  user.py
app/schema/: app.py  app_configs.py  movie.py  review.py
app/view/api/routes/: api.py  app.py  movies.py  users.py
requests/: main.http
